{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player Movement",
            "id": "b58371a3-79fe-4752-8ded-9b2c42c623da",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "6b0b0ad9-7d25-4123-b5ba-12a6ef35ff6a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Camera",
                    "type": "PassThrough",
                    "id": "75e0d83a-bf79-466e-9aa2-1d47daf58234",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CameraZoom",
                    "type": "Value",
                    "id": "abfda366-9ecb-479c-ac21-34333170aa32",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "9cd11059-a2fb-489a-94ec-aedfa3ff87d9",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "ac03d226-81df-467c-8223-abaa9920fde0",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "4e7aba83-a73a-4fda-bc77-7491c3b10f50",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "02aa67cf-e273-4ec3-b149-14cbf7da6f48",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "2b9e15f4-3d34-4ae5-b28a-ebb0daaeba02",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "cffdc9fa-524f-43a1-84da-4413a4139e9c",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "AxisDeadzone,StickDeadzone",
                    "groups": "",
                    "action": "Camera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cd556e98-96ca-4761-8004-4f69e1002507",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "StickDeadzone(min=0.5),NormalizeVector2",
                    "groups": "",
                    "action": "Camera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "cc9f53b2-164b-49a9-8c30-3d4026434974",
                    "path": "1DAxis(whichSideWins=1)",
                    "interactions": "",
                    "processors": "Invert,Clamp(min=-1,max=1)",
                    "groups": "",
                    "action": "CameraZoom",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Negative",
                    "id": "ac1c73b2-2ed3-4ad7-8bcb-c45299809833",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraZoom",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Positive",
                    "id": "a8c1256d-c0ae-4d1a-91d3-1d8fc2d9737f",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraZoom",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "PlayerActions",
            "id": "556c84c4-5ec2-4304-8f27-d4f3c38f7031",
            "actions": [
                {
                    "name": "Roll",
                    "type": "Button",
                    "id": "01510305-64d3-4c1f-843e-b79f79fc524c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Sprint",
                    "type": "PassThrough",
                    "id": "cfab4c26-8a89-4f41-9424-fb8327b11e0f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Dodge",
                    "type": "Button",
                    "id": "40047b1d-9d1d-4bd4-89a8-469ee331b7c0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap(duration=0.05)"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "568a3633-1643-41ea-9c09-c0a757fbe127",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Roll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f1a178f6-4db5-4ad8-91af-587214d2523c",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Roll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0b110eb4-f65c-434a-9db3-5433b15a7c95",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7a2957f9-ed63-4c01-9ae0-b1fc84a2eaad",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dodge",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}